--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-S
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leitor de Código de Barras</title>
+</head>
+<body>
+    <h1>Leitor de Código de Barras</h1>
+    <div id="interactive" class="viewport"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            Quagga.init({
+                inputStream: {
+                    name: "Live",
+                    type: "LiveStream",
+                    target: document.querySelector('#interactive') // Or '#yourElement' (optional)
+                },
+                decoder: {
+                    readers: ["code_128_reader"] // Leia diferentes tipos de código de barras aqui
+                }
+            }, function(err) {
+                if (err) {
+                    console.log(err);
+                    return;
+                }
+                console.log("Initialization finished. Ready to start");
+                Quagga.start();
+            });
+
+            Quagga.onDetected(function(data) {
+                alert("Código de barras detectado: " + data.codeResult.code);
+            });
+        });
+    </script>
+</body>
+</html>
